[package]
name = "osc-utils"
version = "0.1.0"
edition = "2021"
description = "OSC client/server command line tools"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
rosc = "0.10.1"

[[bin]]
name = "osc-client"
path = "src/osc-client.rs"

[[bin]]
name = "osc-server"
path = "src/osc-server.rs"
